# ollyscale

./: .gitignore  .golangci.yml  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .release-please-manifest.json  .releaserc.json  .yamlfmt  404.html  CHANGELOG.md  CONTRIBUTING.md  DEMO_APPS_DOCKER_HUB.md  DOCKER_HUB_DEPLOYMENT_GUIDE.md  DOCKER_HUB_MIGRATION_SUMMARY.md  LICENSE  MIGRATION_COMPLETE.txt  Makefile  OBSOLETE_SCRIPTS.md  PHASE-0-COMPLETE.md  README.md  REBRANDING-PLAN.md  RELEASE-NOTES-v2.0.0.md  RELEASE-PLEASE-SETUP.md  Taskfile.yml  VERSIONING-STRATEGY.md  build.mk  ci.mk  config.mk  index.html  install-mkdocs.sh  local.mk  mkdocs-deploy.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  release.sh  (+4 more)
.github/: copilot-instructions.md  dependabot.yml
.kind/: KERNEL-KEYRING-FIX.md  README.md  locals.tf  main.tf  ollyscale-config  outputs.tf  variables.tf
CARDINALITY-PROTECTION/: index.html
ai-agent/: index.html
ai-agent-deployment/: index.html
api/: index.html
apps/demo/: .dockerignore  .releaserc.json  CHANGELOG.md  Dockerfile  Makefile  __init__.py  backend.py  frontend.py  package.json  pyproject.toml  test_demo.py
build-system/: index.html
build-system-quickstart/: index.html
charts/: README.md  build-and-push-local.sh  deploy-to-argocd.sh  values-local-dev.yaml
config/: attribute-promotion.yaml
database-connection-pooling/: index.html
demos/: index.html
docker-ai-agent-demo/: 01-deploy-ai-demo-local.sh  01-deploy-ai-demo.sh  02-stop-ai-demo.sh  03-cleanup-ai-demo.sh  04-cleanup-images.sh  Dockerfile  agent.py  build-and-push-ai-demo-image.sh  docker-compose.yml
docker-core-only/: 00-force-rebuild.sh  01-start-core-local.sh  01-start-core.sh  02-stop-core.sh  03-rebuild-ui.sh  04-cleanup-images.sh  04-force-rebuild.sh  docker-compose-tinyolly-core.yml
docker-demo/: 01-deploy-demo-local.sh  01-deploy-demo.sh  02-cleanup-demo.sh  03-cleanup-images.sh  app.py  backend-service.py  build-and-push-demo-images.sh  (+3 more)
docker-demo-ebpf/: 01-deploy-ebpf-demo.sh  02-cleanup.sh  app.py  backend-service.py  build-and-push-ebpf-images.sh  docker-compose.yml  remote_write_pb2.py
(+618 files in other folders)
